--- a/lib/gradle.properties
+++ b/lib/gradle.properties
@@ -1,6 +1,6 @@
 GROUP=io.github.zj565061763.kmp
 POM_ARTIFACT_ID=compose-input
-VERSION_NAME=1.0.0-alpha01
+VERSION_NAME=1.0.0
 
 POM_NAME=kmp-compose-input
 POM_DESCRIPTION=Compose Multiplatform input library.
